objects/WorkType.object
<CustomObject>
    <fields>
        <fullName>Checkbox_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Checkbox Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINS_Q_Branch_Demo_Reference__c</fullName>
        <label>Q-Branch Demo Reference</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>FINS_Q_Branch_Demo_Guide</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__Due_Date_Offset__c</fullName>
        <description>Minutes</description>
        <inlineHelpText>Calculates the Due Date by adding Minutes to the Service creation time, reflecting the organisation&apos;s internal SLA</inlineHelpText>
        <label>Due Date Offset</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Exact_Appointments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exact Appointments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SDO_SFS_Self_Service_Work_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to indicate that this Work Type will also be visible to a customer who is self scheduling.</description>
        <inlineHelpText>Check this box to indicate that this Work Type will also be visible to a customer who is self scheduling.</inlineHelpText>
        <label>Self Service Work Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Field Service Lightning (FSL)</fullName>
                    <label>Salesforce Field Service(SFS)</label>
                </value>
                <value>
                    <fullName>Lightning Scheduler (LS)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_WorkTypes</fullName>
        <filterScope>Everything</filterScope>
        <label>All Work Types</label>
    </listViews>
    <listViews>
        <fullName>All_WorkTypes</fullName>
        <filterScope>Everything</filterScope>
        <label>All Work Types</label>
    </listViews>
    <listViews>
        <fullName>FSL_Work_Types</fullName>
        <columns>Name</columns>
        <columns>DurationType</columns>
        <columns>DurationInMinutes</columns>
        <columns>FSL__Due_Date_Offset__c</columns>
        <columns>ShouldAutoCreateSvcAppt</columns>
        <columns>EstimatedDuration</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Field Service Lightning (FSL)</value>
        </filters>
        <label>FSL Work Types</label>
    </listViews>
    <listViews>
        <fullName>LS_Work_Types</fullName>
        <columns>Name</columns>
        <columns>EstimatedDuration</columns>
        <columns>DurationType</columns>
        <columns>DurationInMinutes</columns>
        <columns>Type__c</columns>
        <columns>Description</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Lightning Scheduler (LS)</value>
        </filters>
        <label>LS Work Types</label>
    </listViews>
    <listViews>
        <fullName>My_WorkTypes</fullName>
        <filterScope>Mine</filterScope>
        <label>My Work Types</label>
    </listViews>
    <listViews>
        <fullName>My_WorkTypes</fullName>
        <filterScope>Mine</filterScope>
        <label>My Work Types</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>